mirror_lang/test/valid/basic_variables.mirror
(SET $a = 10 TES)
(SET $b = 20 TES)
(SET $result = $a + $b TES)

(LOG "Sum:" GOL)
(LOG $result GOL)