mirror_lang/test/invalid/missing_closing.mirror
(SET $a = 10 TES)
(IF $a > 5
    (LOG "Missing closing keyword FI)" GOL)